# PhotoSync

./: .gitignore  .gitmodules  AGENTS.md  README.en.md  README.md  README.ru.md  gradle.properties  settings.gradle
.github/: copilot-instructions.md  release.yml
.github/workflows/: release.yml
app/: build.gradle
app/src/androidTest/java/cn/devcxl/photosync/: ExampleInstrumentedTest.kt  RawLibIntegrationTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  libraw_jni.cpp
app/src/main/java/cn/devcxl/photosync/: App.kt
app/src/main/java/cn/devcxl/photosync/activity/: MainActivity.kt  TakingPhotoActivity.kt
app/src/main/java/cn/devcxl/photosync/adapter/: PhotoPagerAdapter.kt
app/src/main/java/cn/devcxl/photosync/data/: AppDatabase.java  AppDatabase.kt  PhotoDao.java  PhotoDao.kt  SyncDeviceDao.java  SyncDeviceDao.kt
app/src/main/java/cn/devcxl/photosync/data/entity/: PhotoEntity.kt  SyncDevice.java  SyncDevice.kt
app/src/main/java/cn/devcxl/photosync/ptp/db/: AppDatabase.java  SyncDevice.java  SyncDeviceDao.java  SyncDeviceManager.java  Uuid.java
app/src/main/java/cn/devcxl/photosync/ptp/detect/: CameraDetector.java  CameraDetector.kt
app/src/main/java/cn/devcxl/photosync/ptp/interfaces/: FileAddedListener.java  FileAddedListener.kt  FileDownloadedListener.java  FileDownloadedListener.kt  FileTransferListener.java  FileTransferListener.kt
app/src/main/java/cn/devcxl/photosync/ptp/manager/: SyncDeviceManager.java  SyncDeviceManager.kt  UsbPtpConnectionController.kt  UsbPtpConnectionState.kt
app/src/main/java/cn/devcxl/photosync/ptp/params/: SyncParams.java  SyncParams.kt
app/src/main/java/cn/devcxl/photosync/ptp/usbcamera/: BaselineInitiator.java  BaselineInitiator.kt  Buffer.java  Buffer.kt  Command.java  Command.kt  Container.java  Container.kt  Data.java  Data.kt  DeviceInfo.java  DeviceInfo.kt  DevicePropDesc.java  DevicePropDesc.kt  DevicePropValue.java  DevicePropValue.kt  Event.java  Event.kt  FileSendData.java  FileSendData.kt  InitiatorFactory.java  InitiatorFactory.kt  KodakExtension.java  KodakExtension.kt  NameFactory.java  NameFactory.kt  ObjectInfo.java  ObjectInfo.kt  OutputStreamData.java  OutputStreamData.kt  PTPBusyException.java  PTPBusyException.kt  PTPException.java  PTPException.kt  PTPOpenSessionException.java  PTPOpenSessionException.kt  PTPUnsupportedException.java  PTPUnsupportedException.kt  ParamVector.java  ParamVector.kt  (+6 more)
app/src/main/java/cn/devcxl/photosync/ptp/usbcamera/eos/: EosEvent.java  EosEvent.kt  EosEventConstants.java  EosEventConstants.kt  EosEventFormat.java  EosEventFormat.kt  EosEventParser.java  EosEventParser.kt  EosInitiator.java  EosInitiator.kt
app/src/main/java/cn/devcxl/photosync/ptp/usbcamera/nikon/: NikonEvent.java  NikonEvent.kt  NikonEventConstants.java  NikonEventConstants.kt  NikonEventFormat.java  NikonEventFormat.kt  NikonEventParser.java  NikonEventParser.kt  NikonInitiator.java  NikonInitiator.kt
app/src/main/java/cn/devcxl/photosync/ptp/usbcamera/sony/: SonyDevicePropDesc.java  SonyDevicePropDesc.kt  SonyExtDeviceInfo.java  SonyExtDeviceInfo.kt  SonyInitiator.java  SonyInitiator.kt
app/src/main/java/cn/devcxl/photosync/receiver/: UsbPermissionReceiver.kt  UsbReceiver.kt
app/src/main/java/cn/devcxl/photosync/utils/: ExifUtils.java  ExtensionUtils.kt  GPS.java  ImageDenoiseUtils.java  ImageDenoiseUtils.kt  OpenCVDenoiser.kt
app/src/main/java/cn/devcxl/photosync/wrapper/: RawWrapper.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  logo.xml
app/src/main/res/layout/: activity_main.xml  activity_taking_photo.xml
app/src/main/res/menu/: nav_menu.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/cn/devcxl/photosync/: ExampleUnitTest.kt
app/src/test/java/cn/devcxl/photosync/ptp/manager/: UsbPtpConnectionPolicyTest.kt
docs/superpowers/plans/: 2026-03-31-libraw-module.md
docs/superpowers/specs/: 2026-03-31-libraw-module-design.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libraw/: build.gradle
libraw/src/main/cpp/: CMakeLists.txt  libraw_jni.cpp
libraw/src/main/java/cn/devcxl/photosync/wrapper/: RawWrapper.kt
